--- a/kwakwala/test-style.css
+++ b/kwakwala/test-style.css
@@ -81,6 +81,40 @@ textarea.island {
 /* ---------------------------------------------------------------- */
 
 /* from https://markheath.net/post/customize-radio-button-css */
+.radio-arb input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-arb label {
+  display: inline-block;
+  background-color: #ddd;
+  padding: 10px 20px;
+  font-family: sans-serif, Arial;
+  font-size: 16px;
+  border: 2px solid #444;
+  border-radius: 4px;
+}
+
+.radio-arb input[type="radio"]:checked + label {
+  background-color:#bbf;
+  border-color: #44c;
+}
+
+.radio-arb input[type="radio"]:focus + label {
+  border: 2px dashed #444;
+}
+
+.radio-arb label:hover {
+  background-color: #ddf;
+} 
+
+/* ---------------------------------------------------------------- */
+/* ---------------------------------------------------------------- */
+/* ---------------------------------------------------------------- */
+
+/* from https://markheath.net/post/customize-radio-button-css */
 /*
 .orth-options-in input[type="checkbox"] {
   opacity: 0;
@@ -313,3 +347,12 @@ a.down-link:link {
   color:#4c4
 }
 
+/* ---------------------------------------------------------------- */
+/* ---------------------------------------------------------------- */
+/* ---------------------------------------------------------------- */
+
+/* Right-to-left text */
+
+.arabic {
+  direction: rtl
+}
